<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8300B3"
    tools:context=".Activitys.SignUpActivity">



    <EditText
        android:id="@+id/signup_name_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Enter Name"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:background="@drawable/edit_bg"
        android:paddingStart="10dp"
        android:inputType="textPersonName"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FBFBFB" />

    <EditText
        android:id="@+id/signup_mail_et"
        android:layout_below="@+id/signup_name_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_mail"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:background="@drawable/edit_bg"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FBFBFB" />



    <EditText
        android:id="@+id/signup_pass_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/signup_mail_et"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:background="@drawable/edit_bg"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="false"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FBFBFB" />


    <EditText
        android:id="@+id/signup_pass_confirm_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/signup_pass_et"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_bg"
        android:ems="10"
        android:hint="Enter Confirm Password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:selectAllOnFocus="false"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FBFBFB" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:backgroundTint="#E91E63"
        android:layout_below="@+id/signup_pass_confirm_et"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"/>

    <TextView
        android:id="@+id/send_login_page_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_btn"
        android:text="@string/already_have_account_login_here"
        android:layout_marginStart="50dp"
        android:textColor="@color/white"/>

    <ImageView
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/avatar" />

</RelativeLayout>