<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:padding="5dp"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/amaranth"
                android:padding="5dp"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold" />


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/top_con"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:weightSum="2"
            android:layout_marginBottom="10dp"
            android:background="@drawable/backrgound_gradent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:src="@drawable/avatar"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="1dp"
                    />



            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/amaranth"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/profile_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/amaranth"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/amaranth"
                    android:text="Point"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_marginStart="20dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/dollar"/>

                    <TextView

                        android:id="@+id/point_tv"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/amaranth"
                        android:text=""
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>






            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_con">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/section_one"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:backgroundTint="#DF5024"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/luckyspinCard"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageid"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_gravity="center"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                app:srcCompat="@drawable/wheel" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageid"
                                android:fontFamily="@font/amaranth"
                                android:gravity="center"
                                android:text="@string/lucky_wheel"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:backgroundTint="#7009D8"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/scrath_card"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <ImageView

                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_gravity="center"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                app:srcCompat="@drawable/scrath" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageid"
                                android:fontFamily="@font/amaranth"
                                android:gravity="center"
                                android:text="@string/scratch_card"
                                android:textColor="#FFFFFF"
                                android:textSize="18sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/section_two"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_below="@id/section_one"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:backgroundTint="#01B8D1"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/watch_ads"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <ImageView

                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_gravity="center"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                app:srcCompat="@drawable/videoads" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/amaranth"
                                android:gravity="center"
                                android:text="@string/watch_ads"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:backgroundTint="#CF13A0"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/visit_web"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <ImageView

                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_gravity="center"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                app:srcCompat="@drawable/website" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageid"
                                android:fontFamily="@font/amaranth"
                                android:gravity="center"
                                android:text="@string/visit_website"
                                android:textColor="#FFFFFF"
                                android:textSize="18sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_below="@id/section_two"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:backgroundTint="#D19D01"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/dail_Checking"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <ImageView

                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_gravity="center"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                app:srcCompat="@drawable/calendar" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/amaranth"
                                android:gravity="center"
                                android:text="@string/daily_checking"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:backgroundTint="#CF0624"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/telegram_card"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <ImageView

                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_gravity="center"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                app:srcCompat="@drawable/telegram" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imageid"
                                android:fontFamily="@font/amaranth"
                                android:gravity="center"
                                android:text="@string/telegram"
                                android:textColor="#FFFFFF"
                                android:textSize="18sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>













